[package]
name = "exhibit"
version = "0.1.1"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2021"

[dependencies]
env_logger = "0.10"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
log = "0.4"
tokio = { version = "1.19.2", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1"
warp = "0.3"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
futures = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }
